--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 PORT=5000
 
 
-POSTGRES_HOST=db.fjoyvwxjghfxhzyytbuy.supabase.co
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=XWs9jXUNEOtxRlAV
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 
-MONGO_URL=mongodb+srv://stamp:u5rxN5pKpUAMnexJ@cluster0.xauy3.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb://root:example@mongodata:27017/service?authSource=admin
 
-REDIS_HOST=redis-14688.c1.ap-southeast-1-1.ec2.cloud.redislabs.com
-REDIS_PORT=14688
+REDIS_HOST=redis
+REDIS_PORT=6379
 REDIS_USERNAME=default
 REDIS_PASSWORD=fbX4PgCelRue3exBCWFETglpCkrzehiB
